Add solution to day 10

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -1511,6 +1511,199 @@
    "source": [
     "day9_part2(final_grid)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 10: Syntax Scoring\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "The puzzle input is a list of code lines: `[<>({}){}[([])<>]]`.\n",
+    "\n",
+    "Each line is made up of chunks which are opened and closed with the following characters: `[]`, `{}`, `<>`, `()`.\n",
+    "\n",
+    "Some lines are incomplete, but others are corrupted. A corrupted line is one where a chunk closes with the wrong character. \n",
+    "\n",
+    "The syntax checker scores syntax errors based on the first illegal character in each line. Illegal characters give the following number of points:\n",
+    "\n",
+    "- `)`: 3 points\n",
+    "- `]`: 57 points\n",
+    "- `}`: 1197 points\n",
+    "- `>`: 25137 points\n",
+    "\n",
+    "Find the first illegal character in each corrupted line of the navigation subsystem. What is the total syntax error score for those errors?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_lines = [\n",
+    "    \"[({(<(())[]>[[{[]{<()<>>\",\n",
+    "    \"[(()[<>])]({[<{<<[]>>(\",\n",
+    "    \"{([(<{}[<>[]}>{[]{[(<()>\",\n",
+    "    \"(((({<>}<{<{<>}{[]{[]{}\",\n",
+    "    \"[[<[([]))<([[{}[[()]]]\",\n",
+    "    \"[{[{({}]{}}([{[{{{}}([]\",\n",
+    "    \"{<[[]]>}<{[{[{[]{()[[[]\",\n",
+    "    \"[<(<(<(<{}))><([]([]()\",\n",
+    "    \"<{([([[(<>()){}]>(<<{{\",\n",
+    "    \"<{([{{}}[<[[[<>{}]]]>[]]\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26397"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day10_part1(lines: list[str]):\n",
+    "    score = 0\n",
+    "    points = {\")\": 3, \"]\": 57, \"}\": 1197, \">\": 25137}\n",
+    "    pairs = {\"(\": \")\", \"[\": \"]\", \"{\": \"}\", \"<\": \">\"}\n",
+    "    for line in lines:\n",
+    "        stack = []\n",
+    "        for char in line:\n",
+    "            if char in [\"}\", \")\", \"]\", \">\"]:\n",
+    "                if char != stack[-1]:\n",
+    "                    score += points[char]\n",
+    "                    break\n",
+    "                else:\n",
+    "                    stack.pop(-1)\n",
+    "            else:\n",
+    "                stack.append(pairs[char])\n",
+    "    return score\n",
+    "\n",
+    "day10_part1(test_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_lines = file_to_list(\"inputs/input10.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "311949"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day10_part1(final_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Discard the corrupted lines. Now, only the incomplete lines remain.\n",
+    "\n",
+    "Incomplete lines don't have any incorrect characters - instead, they're missing some closing characters at the end of the line.\n",
+    "\n",
+    "Find the sequence of closing characters that complete the incomplete lines and score each completion string. The score for each completion string is calculated character-by-character. For each character, multiply the total score by 5 and increase the total score by the point value given for the character:\n",
+    "\n",
+    "- `)`: 1 points\n",
+    "- `]`: 2 points\n",
+    "- `}`: 3 points\n",
+    "- `>`: 4 points\n",
+    "\n",
+    "Sort the scores for all completion string and return the middle score (there is always an odd number of scores)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "288957"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day10_part2(lines: list[str]):\n",
+    "    scores = []\n",
+    "    points = {\")\": 1, \"]\": 2, \"}\": 3, \">\": 4}\n",
+    "    pairs = {\"(\": \")\", \"[\": \"]\", \"{\": \"}\", \"<\": \">\"}\n",
+    "    for line in lines:\n",
+    "        stack = []\n",
+    "        corrupt = False\n",
+    "        for char in line:\n",
+    "            if char in [\"}\", \")\", \"]\", \">\"]:\n",
+    "                if char != stack[-1]:\n",
+    "                    corrupt = True\n",
+    "                else:\n",
+    "                    stack.pop(-1)\n",
+    "            else:\n",
+    "                stack.append(pairs[char])\n",
+    "        if not corrupt:\n",
+    "            score = 0\n",
+    "            for char in reversed(stack):\n",
+    "                score = score * 5 + points[char]\n",
+    "            scores.append(score)\n",
+    "    scores = sorted(scores)\n",
+    "    return scores[len(scores)//2]\n",
+    "\n",
+    "day10_part2(test_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3042730309"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day10_part2(final_lines)"
+   ]
   }
  ],
  "metadata": {
