--- a/2021.ipynb
+++ b/2021.ipynb
@@ -1704,6 +1704,181 @@
    "source": [
     "day10_part2(final_lines)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 11: Dumbo Octopus\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "100 bioluminescent octopuses are arranged in a 10 by 10 grid.\n",
+    "\n",
+    "Each octopus has an energy level that increases over time and is is represented by a value between 0 and 9. Any octopus with an energy level greater than 9 **flashes**. The energy levels and flashes of the group of octopuses can be modelled in steps comprised of three stages:\n",
+    "\n",
+    "1. Increase the energy level of each octopus by 1.\n",
+    "2. Any octopus with an energy level greater than 9 flashes. This increases the energy level of all adjacent octopuses by 1. If this causes an octopus to have an energy level greater than 9, it also flashes. This process continues as long as new octopuses keep having their energy level increased beyond 9. (An octopus can only flash at most once per step.)\n",
+    "3. Any octopus that flashed during this step has its energy level set to 0.\n",
+    "\n",
+    "Given the starting energy levels of the dumbo octopuses in your cavern, simulate 100 steps. How many total flashes are there after 100 steps?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_octopuses = np.array([\n",
+    "    [5,4,8,3,1,4,3,2,2,3],\n",
+    "    [2,7,4,5,8,5,4,7,1,1],\n",
+    "    [5,2,6,4,5,5,6,1,7,3],\n",
+    "    [6,1,4,1,3,3,6,1,4,6],\n",
+    "    [6,3,5,7,3,8,5,4,7,8],\n",
+    "    [4,1,6,7,5,2,4,6,4,5],\n",
+    "    [2,1,7,6,8,4,1,7,2,1],\n",
+    "    [6,8,8,2,8,8,1,1,3,4],\n",
+    "    [4,8,4,6,8,4,8,5,5,4],\n",
+    "    [5,2,8,3,7,5,1,5,2,6]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1656"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def flash(octopuses: np.array, x: int, y: int):\n",
+    "    octopuses[x][y] = 0\n",
+    "    flashes = 1\n",
+    "    for dx in [-1,0,1]:\n",
+    "        for dy in [-1,0,1]:\n",
+    "            nx = x + dx\n",
+    "            ny = y + dy\n",
+    "            if 0 <= nx < 10 and 0 <= ny < 10 and octopuses[nx][ny] != 0:\n",
+    "                octopuses[nx][ny] += 1\n",
+    "                if octopuses[nx][ny] >= 10:\n",
+    "                    flashes += flash(octopuses, nx, ny)\n",
+    "    return flashes\n",
+    "\n",
+    "def day11_part1(octopuses: np.array):\n",
+    "    flashes = 0\n",
+    "    for _ in range(100):\n",
+    "        octopuses += 1\n",
+    "        for x in range(10):\n",
+    "            for y in range(10):\n",
+    "                if octopuses[x][y] > 9:\n",
+    "                    flashes += flash(octopuses, x, y)\n",
+    "    return flashes\n",
+    "\n",
+    "day11_part1(test_octopuses.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_octopuses = np.array([list(map(int, row)) for row in file_to_list(\"inputs/input11.txt\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1729"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day11_part1(final_octopuses.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "What is the first step during which all octopuses flash simultaneously?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "195"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day11_part2(octopuses: np.array):\n",
+    "    synchronous = False\n",
+    "    step = 0\n",
+    "    while not synchronous:\n",
+    "        flashes = 0\n",
+    "        octopuses += 1\n",
+    "        for x in range(10):\n",
+    "            for y in range(10):\n",
+    "                if octopuses[x][y] > 9:\n",
+    "                    flashes += flash(octopuses, x, y)\n",
+    "        if flashes == 100:\n",
+    "            synchronous = True\n",
+    "        step += 1\n",
+    "    return step\n",
+    "\n",
+    "day11_part2(test_octopuses.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "237"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day11_part2(final_octopuses.copy())"
+   ]
   }
  ],
  "metadata": {
