Add solution to day 12

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,18 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import copy\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,6 +1879,169 @@
    ],
    "source": [
     "day11_part2(final_octopuses.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 12: Passage Passing\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "The puzzle input is a map of a cave system with one `start` and `end` caves. The map indicates how all the caves are connected. There are two types of caves: big (uppercase) and small caves (lowercase). Small caves can be visited at most once, while big caves can be visited any number of times.\n",
+    "\n",
+    "How many paths through this cave system are there that visit small caves at most once?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Represent map as an adjencency list\n",
+    "test_map = defaultdict(\n",
+    "    list, {\n",
+    "        \"start\": [\"A\", \"b\"],\n",
+    "        \"A\": [\"start\", \"c\", \"b\", \"end\"],\n",
+    "        \"b\": [\"start\", \"A\", \"d\", \"end\"],\n",
+    "        \"c\": [\"A\"],\n",
+    "        \"d\": [\"b\"],\n",
+    "        \"end\": [\"A\", \"b\"]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day12_part1(map: defaultdict, cave: str, visited: set):\n",
+    "    \"\"\"Recursive depth-first search\"\"\"\n",
+    "    paths = 0\n",
+    "    if cave == \"end\":\n",
+    "        return 1\n",
+    "    if cave in visited and cave.islower():\n",
+    "        return 0\n",
+    "    for adjacent in map[cave]:\n",
+    "        paths += day12_part1(map, adjacent, visited | {cave})\n",
+    "    return paths\n",
+    "\n",
+    "day12_part1(test_map, \"start\", set())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_map = defaultdict(list)\n",
+    "for line in file_to_list(\"inputs/input12.txt\"):\n",
+    "    a, b = line.split('-')\n",
+    "    final_map[a] += [b]\n",
+    "    final_map[b] += [a]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4659"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day12_part1(final_map, \"start\", set())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "New rules: one small cave can be visited twice, while the `start` and `end` caves can be visited only once.\n",
+    "\n",
+    "How many paths are there through this cave system?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day12_part2(map: defaultdict, cave: str, visited: set, twice: str):\n",
+    "    paths = 0\n",
+    "    if cave == \"end\":\n",
+    "        return 1\n",
+    "    if cave in visited:\n",
+    "        if cave == \"start\":\n",
+    "            return 0\n",
+    "        if cave.islower():\n",
+    "            if twice is None:\n",
+    "                twice = cave\n",
+    "            else:\n",
+    "                return 0\n",
+    "    for adjacent in map[cave]:\n",
+    "        paths += day12_part2(map, adjacent, visited | {cave}, twice)\n",
+    "    return paths\n",
+    "\n",
+    "day12_part2(test_map, \"start\", set(), None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "148962"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day12_part2(final_map, \"start\", set(), None)"
    ]
   }
  ],
