Edit problem statement of day 12

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1889,14 +1889,14 @@
     "\n",
     "### Part 1\n",
     "\n",
-    "The puzzle input is a map of a cave system with one `start` and `end` caves. The map indicates how all the caves are connected. There are two types of caves: big (uppercase) and small caves (lowercase). Small caves can be visited at most once, while big caves can be visited any number of times.\n",
+    "The puzzle input is a map of a cave system. The start and end of the cave system are labelled as `start` and `end`. The map indicates how all the caves are connected. There are two types of caves: big (uppercase) and small caves (lowercase). Small caves can be visited at most once, while big caves can be visited any number of times.\n",
     "\n",
     "How many paths through this cave system are there that visit small caves at most once?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
        "10"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +1968,7 @@
        "4659"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
        "36"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
        "148962"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
