Add solution to day 13

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -23,7 +23,7 @@
     "import copy\n",
     "import numpy as np\n",
     "import re\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict, namedtuple"
    ]
   },
   {
@@ -2042,6 +2042,184 @@
    ],
    "source": [
     "day12_part2(final_map, \"start\", set(), None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 13: Transparent Origami\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "The puzzle input is a list of points on the coordinate system of a sheet of transparent paper and a list of fold instructions. The center of the coordinate system is located at the top-left corner of the sheet of paper, with the x-coordinate stretching horizontally and the y-coordinate vertically. Each instruction indicates a line along which to fold the paper. The paper is folded **up** for horizontal lines (y=...) and **left** for vertical lines (x=...). Points will never appear on a fold line.\n",
+    "\n",
+    "How many dots are visible after completing just the first fold instruction on the transparent paper?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Point = namedtuple(\"Point\", \"x y\")\n",
+    "test_points = [\n",
+    "    Point(6,10), Point(0,14), Point(9,10), Point(0,3), Point(10,4), Point(4,11),\n",
+    "    Point(6,0), Point(6,12), Point(4,1), Point(0,13), Point(10,12), Point(3,4),\n",
+    "    Point(3,0), Point(8,4), Point(1,10), Point(2,14), Point(8,10), Point(9,0),\n",
+    "]\n",
+    "Instruction = namedtuple(\"Instruction\", \"axis line\") \n",
+    "test_instructions = [\n",
+    "    Instruction(\"y\", 7),\n",
+    "    Instruction(\"x\", 5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day13_part1(points: list[Point], instructions: list[Instruction]):\n",
+    "    visible = set()\n",
+    "    fold = instructions[0]\n",
+    "    for point in points:\n",
+    "        # Horizontal fold (y=...)\n",
+    "        if fold.axis == \"y\":\n",
+    "            if fold.line > point.y:\n",
+    "                visible.add(point)\n",
+    "            else:\n",
+    "                y = fold.line - (point.y - fold.line)\n",
+    "                visible.add((point.x, y))\n",
+    "        # Vertical fold (x=...)\n",
+    "        else:\n",
+    "            if fold.line > point.x:\n",
+    "                visible.add(point)\n",
+    "            else: \n",
+    "                x = fold.line - (point.x - fold.line)\n",
+    "                visible.add((x, point.y))\n",
+    "    return len(visible)\n",
+    "\n",
+    "day13_part1(test_points, test_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input13 = file_to_list(\"inputs/input13.txt\", sep=\"\\n\\n\")\n",
+    "final_points = [Point(*map(int, point.split(\",\"))) for point in input13[0].split(\"\\n\")]\n",
+    "final_instructions = [i.split()[-1].split(\"=\") for i in input13[1].split(\"\\n\")]\n",
+    "final_instructions = [Instruction(i[0], int(i[1])) for i in final_instructions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "704"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day13_part1(final_points, final_instructions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Complete all instructions. What is the height-letter code formed by the points on the folded sheet of paper?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "█████\n",
+      "█   █\n",
+      "█   █\n",
+      "█   █\n",
+      "█████\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day13_part2(points: list[Point], instructions: list[Instruction]):\n",
+    "    visible = set()\n",
+    "    for point in points:\n",
+    "        for fold in instructions:\n",
+    "            # Horizontal fold (y=...)\n",
+    "            if fold.axis == \"y\":\n",
+    "                if fold.line < point.y:\n",
+    "                    y = fold.line - (point.y - fold.line)\n",
+    "                    point = Point(point.x, y)\n",
+    "            # Vertical fold (x=...)\n",
+    "            else:\n",
+    "                if fold.line < point.x:\n",
+    "                    x = fold.line - (point.x - fold.line)\n",
+    "                    point = Point(x, point.y)\n",
+    "        visible.add(point)\n",
+    "    # Print the code to the console\n",
+    "    max_x = max(x for x,y in visible)\n",
+    "    max_y = max(y for x,y in visible)\n",
+    "    for y in range(max_y + 1):\n",
+    "        values = [point.x for point in visible if point.y == y ]\n",
+    "        print(\"\".join([\"█\" if x in values else \" \" for x in range(max_x + 1)]))\n",
+    "        \n",
+    "day13_part2(test_points, test_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "█  █  ██   ██    ██ ███  ████ █  █  ██ \n",
+      "█  █ █  █ █  █    █ █  █ █    █  █ █  █\n",
+      "████ █    █  █    █ ███  ███  ████ █   \n",
+      "█  █ █ ██ ████    █ █  █ █    █  █ █   \n",
+      "█  █ █  █ █  █ █  █ █  █ █    █  █ █  █\n",
+      "█  █  ███ █  █  ██  ███  ████ █  █  ██ \n"
+     ]
+    }
+   ],
+   "source": [
+    "day13_part2(final_points, final_instructions)"
    ]
   }
  ],
