Add solution to day 14

--- a/2021.ipynb
+++ b/2021.ipynb
@@ -23,7 +23,7 @@
     "import copy\n",
     "import numpy as np\n",
     "import re\n",
-    "from collections import defaultdict, namedtuple"
+    "from collections import Counter, defaultdict, namedtuple"
    ]
   },
   {
@@ -2220,6 +2220,165 @@
    ],
    "source": [
     "day13_part2(final_points, final_instructions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 14: Extended Polymerization\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "THe puzzle input is a polymer template and a list of pair insertion rules.\n",
+    "\n",
+    "The polymer template is the basis for the polymerization process. On each step of the polymerization process, an element is inserted between the polymer's element pairs based on the pair insertion rules. Insertions all happen simultaneously.\n",
+    "\n",
+    "E.g. the template `NNCB` produces the pairs `NN`, `NC` and `CB`. If there is a rule `NN -> C`, the element C is inserted between `N` and `N`.\n",
+    "\n",
+    "Simulate 10 steps of the polymerization process and find the most and least common elements in the result. What do you get if you take the quantity of the most common element and subtract the quantity of the least common element?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_template = \"NNCB\"\n",
+    "test_rules = {\n",
+    "    \"CH\": \"B\", \"HH\": \"N\", \"CB\": \"H\", \"NH\": \"C\",\n",
+    "    \"HB\": \"C\", \"HC\": \"B\", \"HN\": \"C\", \"NN\": \"C\",\n",
+    "    \"BH\": \"H\", \"NC\": \"B\", \"NB\": \"B\", \"BN\": \"B\",\n",
+    "    \"BB\": \"N\", \"BC\": \"B\", \"CC\": \"N\", \"CN\": \"C\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1588"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day14_part1(template: str, rules: dict):\n",
+    "    polymer = template\n",
+    "    for _ in range(10):\n",
+    "        new = \"\"\n",
+    "        for i in range(len(polymer)-1):\n",
+    "            pair = polymer[i:i+2]\n",
+    "            insertion = rules[pair]\n",
+    "            new += pair[0] + insertion\n",
+    "        polymer = new + polymer[-1]\n",
+    "    freq = Counter(polymer).values()\n",
+    "    return max(freq) - min(freq)\n",
+    "\n",
+    "day14_part1(test_template, test_rules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input14 = file_to_list(\"inputs/input14.txt\", sep=\"\\n\\n\")\n",
+    "final_template = input14[0]\n",
+    "final_rules = dict((rule.split(\" -> \")) for rule in input14[1].split(\"\\n\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2851"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day14_part1(final_template, final_rules)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Simulate 40 steps of the polymerization process and find the most and least common elements in the result. What do you get if you take the quantity of the most common element and subtract the quantity of the least common element?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2188189693529"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# day14_part1() has a quadratic space and time complexity and \n",
+    "# therefore does not sclae to 40 steps\n",
+    "\n",
+    "def day14_part2(template: str, rules: dict):\n",
+    "    pairs = Counter([template[i:i+2] for i in range(len(template)-1)])\n",
+    "    freq = Counter(template)\n",
+    "    for _ in range(40):\n",
+    "        for pair, n in pairs.copy().items():\n",
+    "            insertion = rules[pair]\n",
+    "            freq[insertion] += n\n",
+    "            pairs[pair[0] + insertion] += n\n",
+    "            pairs[insertion + pair[1]] += n\n",
+    "            pairs[pair] -= n\n",
+    "    return max(freq.values()) - min(freq.values())\n",
+    "\n",
+    "day14_part2(test_template, test_rules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10002813279337"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day14_part2(final_template, final_rules)"
    ]
   }
  ],
