--- a/2021.ipynb
+++ b/2021.ipynb
@@ -21,8 +21,10 @@
    "outputs": [],
    "source": [
     "import copy\n",
+    "import heapq as hq\n",
     "import numpy as np\n",
     "import re\n",
+    "import sys\n",
     "from collections import Counter, defaultdict, namedtuple"
    ]
   },
@@ -2379,6 +2381,190 @@
    ],
    "source": [
     "day14_part2(final_template, final_rules)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 15: Chiton\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "The puzzle input is a grid with a risk level associated to a each case.\n",
+    "\n",
+    "Find the path between the top-left corner and the bottom-right corner with the lowest risk level. Diagonal movements are not allowed. The risk of the starting position (top-left case) does not count towards the total."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_grid = [\n",
+    "    [1,1,6,3,7,5,1,7,4,2],\n",
+    "    [1,3,8,1,3,7,3,6,7,2],\n",
+    "    [2,1,3,6,5,1,1,3,2,8],\n",
+    "    [3,6,9,4,9,3,1,5,6,9],\n",
+    "    [7,4,6,3,4,1,7,1,1,1],\n",
+    "    [1,3,1,9,1,2,8,1,3,7],\n",
+    "    [1,3,5,9,9,1,2,4,2,1],\n",
+    "    [3,1,2,5,4,2,1,6,3,9],\n",
+    "    [1,2,9,3,1,3,8,5,2,1],\n",
+    "    [2,3,1,1,9,4,4,5,8,1]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day15_part1(grid: list[list]):\n",
+    "    \"\"\"\n",
+    "    Djikstra's algorithm to find the shortest path\n",
+    "    between the start and end nodes of the grid.\n",
+    "    \"\"\"\n",
+    "    source = (0,0)\n",
+    "    destination = (len(grid)-1, len(grid[0])-1)\n",
+    "    distances = {source: 0}\n",
+    "    queue = [(0, source)]\n",
+    "    visited = set()\n",
+    "    while queue:\n",
+    "        dist, node = hq.heappop(queue)\n",
+    "        if node == destination:\n",
+    "            return dist\n",
+    "        if node in visited:\n",
+    "            continue\n",
+    "        visited.add(node)\n",
+    "        coordinates = [(-1, 0), (0, 1), (1, 0), (0, -1)]\n",
+    "        x, y = node\n",
+    "        for dx, dy in coordinates:\n",
+    "            if 0 <= x+dx < len(grid) and 0 <= y+dy < len(grid[0]):\n",
+    "                nx, ny = x+dx, y+dy\n",
+    "                new_dist = dist + grid[nx][ny]\n",
+    "                new_node = (nx,ny)\n",
+    "                if new_dist < distances.get(new_node, sys.maxsize):\n",
+    "                    distances[new_node] = new_dist\n",
+    "                    hq.heappush(queue, (new_dist, new_node))\n",
+    "\n",
+    "day15_part1(test_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_grid = [list(map(int, row)) for row in file_to_list(\"inputs/input15.txt\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "410"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day15_part1(final_grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "The initial puzzle input is only a fraction of the total map. The full map is five times larger in both dimensions. The original map tile repeats to the right and downwards, but the risk levels increase by 1 compared to the tile up or to the left of it. Risk levels wrap around 9 back to 1.\n",
+    "\n",
+    "Using the full map, what is the lowest total risk of any path from the top left to the bottom right?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform(grid: list[list]):\n",
+    "    \"\"\"Generates the full map based on the original map tile\"\"\"\n",
+    "    grid = np.array(grid)\n",
+    "    shape = grid.shape[0]\n",
+    "    for i in range(1, 5):\n",
+    "        grid = np.concatenate((grid, grid[:, :shape] + i), axis=1)\n",
+    "        grid = np.concatenate((grid, grid[:shape] + i), axis=0)\n",
+    "    grid = np.where(grid<=9, grid, grid-9)\n",
+    "    return grid\n",
+    "\n",
+    "test_grid = transform(test_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "315"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day15_part2(grid: np.array):\n",
+    "    return day15_part1(grid)\n",
+    "\n",
+    "day15_part2(test_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2809"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_grid = transform(final_grid)\n",
+    "day15_part2(final_grid)"
    ]
   }
  ],
