--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "import string\n",
     "from typing import List"
    ]
@@ -370,6 +371,113 @@
     "    return count\n",
     "\n",
     "day4part2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5: Supply Stacks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ZBDRNPMVH'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day5part1():\n",
+    "    stacks = {\n",
+    "        1: [\"B\", \"P\", \"N\", \"Q\", \"H\", \"D\", \"R\", \"T\"],\n",
+    "        2: [\"W\", \"G\", \"B\", \"J\", \"T\", \"V\"],\n",
+    "        3: [\"N\", \"R\", \"H\", \"D\", \"S\", \"V\", \"M\", \"Q\"],\n",
+    "        4: [\"P\", \"Z\", \"N\", \"M\", \"C\"],\n",
+    "        5: [\"D\", \"Z\", \"B\"],\n",
+    "        6: [\"V\", \"C\", \"W\", \"Z\"],\n",
+    "        7: [\"G\", \"Z\", \"N\", \"C\", \"V\", \"Q\", \"L\", \"S\"],\n",
+    "        8: [\"L\", \"G\", \"J\", \"M\", \"D\", \"N\", \"V\"],\n",
+    "        9: [\"T\", \"P\", \"M\", \"F\", \"Z\", \"C\", \"G\"]\n",
+    "    }\n",
+    "    instructions = []\n",
+    "    with open(\"./inputs/input5.txt\") as f:\n",
+    "        input = f.read().rstrip()\n",
+    "        instructions = input.split(\"\\n\\n\")[1].split(\"\\n\")\n",
+    "    for instr in instructions:\n",
+    "        quantity, origin, destination = map(int, re.split(r\" from | to \", instr[5:]))\n",
+    "        for _ in range(quantity):\n",
+    "            stacks[destination].append(stacks[origin].pop())\n",
+    "    message = \"\".join([stack.pop() for stack in stacks.values()])\n",
+    "    return message\n",
+    "\n",
+    "day5part1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'WDLPFNNNB'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day5part2():\n",
+    "    stacks = {\n",
+    "        1: [\"B\", \"P\", \"N\", \"Q\", \"H\", \"D\", \"R\", \"T\"],\n",
+    "        2: [\"W\", \"G\", \"B\", \"J\", \"T\", \"V\"],\n",
+    "        3: [\"N\", \"R\", \"H\", \"D\", \"S\", \"V\", \"M\", \"Q\"],\n",
+    "        4: [\"P\", \"Z\", \"N\", \"M\", \"C\"],\n",
+    "        5: [\"D\", \"Z\", \"B\"],\n",
+    "        6: [\"V\", \"C\", \"W\", \"Z\"],\n",
+    "        7: [\"G\", \"Z\", \"N\", \"C\", \"V\", \"Q\", \"L\", \"S\"],\n",
+    "        8: [\"L\", \"G\", \"J\", \"M\", \"D\", \"N\", \"V\"],\n",
+    "        9: [\"T\", \"P\", \"M\", \"F\", \"Z\", \"C\", \"G\"]\n",
+    "    }\n",
+    "    instructions = []\n",
+    "    with open(\"./inputs/input5.txt\") as f:\n",
+    "        input = f.read().rstrip()\n",
+    "        instructions = input.split(\"\\n\\n\")[1].split(\"\\n\")\n",
+    "    for instr in instructions:\n",
+    "        quantity, origin, destination = map(int, re.split(r\" from | to \", instr[5:]))\n",
+    "        stacks[destination].extend(stacks[origin][-quantity:])\n",
+    "        del stacks[origin][-quantity:]\n",
+    "    message = \"\".join([stack.pop() for stack in stacks.values()])\n",
+    "    return message\n",
+    "    \n",
+    "day5part2()"
    ]
   }
  ],
