--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -479,6 +479,83 @@
     "    \n",
     "day5part2()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6: Tuning Trouble"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1855"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6part1():\n",
+    "    datastream = \"\"\n",
+    "    with open(\"./inputs/input6.txt\") as f:\n",
+    "        datastream = f.read().rstrip()\n",
+    "    for idx in range(4, len(datastream)):\n",
+    "        if len(set(datastream[idx-4:idx])) == 4:\n",
+    "            return idx\n",
+    "\n",
+    "day6part1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3256"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day6part2():\n",
+    "    datastream = \"\"\n",
+    "    with open(\"./inputs/input6.txt\") as f:\n",
+    "        datastream = f.read().rstrip()\n",
+    "    for idx in range(14, len(datastream)):\n",
+    "        if len(set(datastream[idx-14:idx])) == 14:\n",
+    "            return idx\n",
+    "\n",
+    "day6part2()"
+   ]
   }
  ],
  "metadata": {
