--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -22,6 +22,7 @@
    "source": [
     "import re\n",
     "import string\n",
+    "from collections import defaultdict\n",
     "from typing import List"
    ]
   },
@@ -556,11 +557,110 @@
     "\n",
     "day6part2()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 7: No Space Left On Device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1581595"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day7part1():\n",
+    "    lines = file_to_list(\"./inputs/input7.txt\")\n",
+    "    # Filesystem tree\n",
+    "    tree = defaultdict(int)\n",
+    "    # Build the tree based on terminal output\n",
+    "    path = []\n",
+    "    for line in lines:\n",
+    "        if line.startswith(\"$ cd\"): # Change dir\n",
+    "            if line[5:] == \"..\":\n",
+    "                path.pop()\n",
+    "            else:\n",
+    "                path.append(line[5:])\n",
+    "        elif line.startswith(\"$ ls\"): # List files and dirs\n",
+    "            continue\n",
+    "        elif line[:3] != \"dir\": # Output of `$ ls` (only files)\n",
+    "            for i in range(len(path)):\n",
+    "                tree[tuple(path[:i+1])] += int(line.split()[0])\n",
+    "    # Sum of files equal or smaller than 100000\n",
+    "    return sum(size for size in tree.values() if size <= 100000)\n",
+    "\n",
+    "day7part1()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1544176\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day7part2():\n",
+    "    lines = file_to_list(\"./inputs/input7.txt\")\n",
+    "    tree = defaultdict(int)\n",
+    "    path = []\n",
+    "    for line in lines:\n",
+    "        if line.startswith(\"$ cd\"):\n",
+    "            if line[5:] == \"..\":\n",
+    "                path.pop()\n",
+    "            else:\n",
+    "                path.append(line[5:])\n",
+    "        elif line.startswith(\"$ ls\"):\n",
+    "            continue\n",
+    "        elif line[:3] != \"dir\":\n",
+    "            for i in range(len(path)):\n",
+    "                tree[tuple(path[:i+1])] += int(line.split()[0])\n",
+    "    # Space to free up to install the update\n",
+    "    free_up = 30000000 - (70000000 - tree[(\"/\",)])\n",
+    "    # Smallest file that is larger than the space to free up\n",
+    "    print(min(size for size in tree.values() if size >= free_up))\n",
+    "\n",
+    "day7part2()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -574,12 +674,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "c4c98b6ad6ddafdeff31911711d70567b64755a99e77658839cf08210a12592a"
    }
   }
  },
