--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -20,9 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
+    "import numpy as np\n",
     "import re\n",
     "import string\n",
+    "import sys\n",
     "from collections import defaultdict\n",
     "from typing import List"
    ]
@@ -674,6 +675,108 @@
     "    print(min(size for size in tree.values() if size >= free_up))\n",
     "\n",
     "day7part2()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 8: Treetop Tree House"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1546"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8part1():\n",
+    "    input = file_to_list(\"./inputs/input8.txt\")\n",
+    "    forest = np.array([list(line) for line in input], int)\n",
+    "    count = 0\n",
+    "    for x, y in np.ndindex(forest.shape):\n",
+    "        tree = forest[x, y]\n",
+    "        if all(left < tree for left in forest[x,0:y]) \\\n",
+    "            or all(right < tree for right in forest[x,y+1:]) \\\n",
+    "            or all(top < tree for top in forest.T[y,0:x]) \\\n",
+    "            or all(bottom < tree for bottom in forest.T[y,x+1:]) :\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "day8part1()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Inspired by [this solution](https://www.reddit.com/r/adventofcode/comments/zfpnka/comment/izhcy8c/?utm_source=share&utm_medium=web2x&context=3)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "519064"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8part2():\n",
+    "    input = file_to_list(\"./inputs/input8.txt\")\n",
+    "    forest = np.array([list(line) for line in input], int)\n",
+    "    max_score = 0\n",
+    "    for x, y in np.ndindex(forest.shape):\n",
+    "        tree = forest[x, y]\n",
+    "\n",
+    "        def view_dist(view: List[int]):\n",
+    "            view_dist = 0\n",
+    "            for t in view:\n",
+    "                view_dist += 1\n",
+    "                if t >= tree:\n",
+    "                    break\n",
+    "            return view_dist\n",
+    "\n",
+    "        score = view_dist(forest[x,0:y][::-1]) \\\n",
+    "            * view_dist(forest[x,y+1:]) \\\n",
+    "            * view_dist(forest.T[y,0:x][::-1]) \\\n",
+    "            * view_dist(forest.T[y,x+1:])\n",
+    "        if score > max_score:\n",
+    "            max_score = score\n",
+    "    return max_score\n",
+    "\n",
+    "day8part2()"
    ]
   }
  ],
